--- a/plugin.xml
+++ b/plugin.xml
@@ -21,14 +21,14 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     id="cordova-plugin-wkwebview-file-xhr"
-    version="2.1.4">
+    version="1.0.0">
     <name>Cordova WKWebView File XHR Plugin</name>
-    <description>This plugin includes the Apache Cordova WKWebView plugin and resolves XHR Cross-Origin Resource Sharing (CORS) constraints.</description>
-    <license>UPL 1.0</license> 
+    <description>This plugin resolves XHR Cross-Origin Resource Sharing (CORS) constraints.</description>
+    <license>MIT</license> 
     <keywords>cordova,wkwebview,webview</keywords>
-    <repo>https://github.com/oracle/cordova-plugin-wkwebview-file-xhr.git</repo>
+    <repo>https://github.com/globules-io/cordova-plugin-ios-xhr.git</repo>
     <engines>
-      <engine name="cordova-ios" version=">=4.0.0" />
+      <engine name="cordova-ios" version=">=6.0.0" />
       <engine name="apple-ios" version=">=9.0" />
     </engines>
 
