--- a/plugin.xml
+++ b/plugin.xml
@@ -20,7 +20,7 @@
  -->
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    id="cordova-plugin-wkwebview-file-xhr"
+    id="cordova-plugin-ios-xhr"
     version="1.0.0">
     <name>Cordova WKWebView File XHR Plugin</name>
     <description>This plugin resolves XHR Cross-Origin Resource Sharing (CORS) constraints.</description>
