--- a/plugin.xml
+++ b/plugin.xml
@@ -20,8 +20,7 @@
  -->
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    id="@globules-io/cordova-plugin-ios-xhrcordova-plugin-ios-xhr"
-    version="1.0.6">
+    id="@globules-io/cordova-plugin-ios-xhr" version="1.0.6">
     <name>Cordova WKWebView File XHR Plugin</name>
     <description>This plugin resolves XHR Cross-Origin Resource Sharing (CORS) constraints.</description>
     <license>MIT</license> 
