package id for legacy cordova

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@globules-io/cordova-plugin-ios-xhr",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Cordova iOS 6+ File XHR Plugin",
   "cordova": {
-    "id": "cordova-plugin-ios-xhr",
+    "id": "@globules-io/cordova-plugin-ios-xhr",
     "platforms": [
       "ios"
     ]
